test/cases/parser/DottedPatErr2.errors
src/DottedPatErr2.b:10:10: Syntax error (expected variable or constructor name)
